syntax = "proto3";
option java_multiple_files = true;
option java_package = "service.bookstore";


service BookstoreService {
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse);
  rpc GetBookDetails(GetBookDetailsRequest) returns (GetBookDetailsResponse);
  rpc GetBookReviews(GetBookReviewsRequest) returns (stream BookReview);
  rpc SubmitBookReview(stream SubmitBookReviewRequest) returns (SubmitBookReviewResponse);
}

message ListBooksRequest {}

message ListBooksResponse {
  repeated Book book = 1;
}

message GetBookDetailsRequest {
  string book_id = 1;
}

message GetBookDetailsResponse {
  string title = 1;
  string author = 2;
  string description = 3;
}

message GetBookReviewsRequest {
  string book_id = 1;
}

message BookReview {
  string reviewer_name = 1;
  string review_text = 2;
}

message SubmitBookReviewRequest {
  string book_id = 1;
  string reviewer_name = 2;
  string review_text = 3;
}

message SubmitBookReviewResponse {
  string message = 1;
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string description = 4;
}
